--- a/blinkid-android-master/BlinkIDSample/LibUtils/src/main/res/layout/edit_view.xml
+++ b/blinkid-android-master/BlinkIDSample/LibUtils/src/main/res/layout/edit_view.xml
@@ -1,6 +1,7 @@
 <?xml version="1.0" encoding="utf-8"?>
 <LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
     xmlns:app="http://schemas.android.com/apk/res-auto"
+    xmlns:tools="http://schemas.android.com/tools"
     android:orientation="vertical"
     android:layout_width="match_parent"
     android:layout_height="match_parent">
@@ -252,18 +253,17 @@
                 android:ems="10"
                 android:inputType="textPersonName" />
 
-            <TextView
-                android:id="@+id/textView15"
+            <ImageView
+                android:id="@+id/imageFront"
                 android:layout_width="match_parent"
                 android:layout_height="wrap_content"
-                android:text="Visitas" />
+                tools:srcCompat="@tools:sample/avatars" />
 
-            <EditText
-                android:id="@+id/visitas"
+            <ImageView
+                android:id="@+id/imageBack"
                 android:layout_width="match_parent"
                 android:layout_height="wrap_content"
-                android:ems="10"
-                android:inputType="textPersonName" />
+                tools:srcCompat="@tools:sample/avatars" />
 
             <Button
                 android:id="@+id/button3"
