--- a/blinkid-android-master/BlinkIDSample/LibUtils/src/main/res/layout/edit_view.xml
+++ b/blinkid-android-master/BlinkIDSample/LibUtils/src/main/res/layout/edit_view.xml
@@ -253,6 +253,19 @@
                 android:ems="10"
                 android:inputType="textPersonName" />
 
+            <TextView
+                android:id="@+id/textView15"
+                android:layout_width="match_parent"
+                android:layout_height="wrap_content"
+                android:text="Visitas" />
+
+            <EditText
+                android:id="@+id/visitas"
+                android:layout_width="match_parent"
+                android:layout_height="wrap_content"
+                android:ems="10"
+                android:inputType="textPersonName" />
+
             <ImageView
                 android:id="@+id/imageFront"
                 android:layout_width="match_parent"
