Se agrego función agregar usuarios
se agrego función para agregar usuarios y modificaciones estéticas

--- a/blinkid-android-master/BlinkIDSample/LibUtils/src/main/res/layout/login_view.xml
+++ b/blinkid-android-master/BlinkIDSample/LibUtils/src/main/res/layout/login_view.xml
@@ -2,8 +2,8 @@
 <LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
     xmlns:app="http://schemas.android.com/apk/res-auto"
     xmlns:tools="http://schemas.android.com/tools"
-    android:layout_width="1080px"
-    android:layout_height="1920px"
+    android:layout_width="match_parent"
+    android:layout_height="match_parent"
     android:background="@color/cardview_light_background"
     android:orientation="vertical">
 
@@ -31,10 +31,30 @@
             android:ems="10"
             android:hint="Password"
             android:inputType="textPersonName"
+            android:textColor="@color/mb_black"
+            android:textColorHint="#bdbdbd"
             app:layout_constraintEnd_toEndOf="parent"
             app:layout_constraintHorizontal_bias="0.711"
             app:layout_constraintStart_toStartOf="parent"
             app:layout_constraintTop_toBottomOf="@+id/ettUsername" />
+
+        <EditText
+            android:id="@+id/ettUsername"
+            android:layout_width="248dp"
+            android:layout_height="55dp"
+            android:layout_marginStart="24dp"
+            android:layout_marginLeft="24dp"
+            android:layout_marginTop="48dp"
+            android:backgroundTint="@color/mb_blue_dark"
+            android:ems="10"
+            android:hint="Username"
+            android:inputType="textPersonName"
+            android:textColor="@color/mb_black"
+            android:textColorHint="#bdbdbd"
+            app:layout_constraintEnd_toEndOf="parent"
+            app:layout_constraintHorizontal_bias="0.669"
+            app:layout_constraintStart_toStartOf="parent"
+            app:layout_constraintTop_toBottomOf="@+id/imageView" />
 
         <ImageView
             android:id="@+id/imageView3"
@@ -65,22 +85,6 @@
             app:layout_constraintTop_toTopOf="parent"
             app:layout_constraintVertical_bias="0.0"
             app:srcCompat="@drawable/user" />
-
-        <EditText
-            android:id="@+id/ettUsername"
-            android:layout_width="248dp"
-            android:layout_height="55dp"
-            android:layout_marginStart="24dp"
-            android:layout_marginLeft="24dp"
-            android:layout_marginTop="48dp"
-            android:backgroundTint="@color/mb_blue_dark"
-            android:ems="10"
-            android:hint="Username"
-            android:inputType="textPersonName"
-            app:layout_constraintEnd_toEndOf="parent"
-            app:layout_constraintHorizontal_bias="0.669"
-            app:layout_constraintStart_toStartOf="parent"
-            app:layout_constraintTop_toBottomOf="@+id/imageView" />
 
         <Button
             android:id="@+id/btnRegister"
